Co-authored-by: kt_rizzard von ozz <kt155430@users.noreply.github.com> Co-authored-by: ff_tripleF <ff155424@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ h1 {
     font-style: arial;
 }
 #balken {
+    
+  
     padding: 20px;
-    background-color: rgba(245, 159, 56, 0.985);
+    background-color: rgba(248, 175, 92, 0.985)
 }
 .search{
     display: flex;
